// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewServer page with servers Component match snapshot 1`] = `
<div
  className="container"
>
  <div
    className="content"
  >
    <h1>
      Add a Server
    </h1>
    <h3
      className="subtitle"
    >
      Before working on a project, you must first connect to a local or remote server.
    </h3>
    <div
      className="servers"
    >
      <ServerOption
        Server={
          <Server
            direction="up"
          />
        }
        actionLabel="CONNECT"
        subtitle="Remote servers are ready and might contain active projects. You need access privileges to the Server before connecting to it."
        title="Connect to a Remote Server"
        to="/connect-to-remote-server"
      />
      <ServerOption
        Server={
          <Server
            direction="down"
          />
        }
        actionLabel="INSTALL"
        subtitle="You can work locally by installing a KDL Server in your machine. Only one local Server can be installed."
        title="Install a Local Server"
        to="/check-local-server-requirements"
      />
    </div>
  </div>
  <ActionsBar
    centerActions={true}
    className="actionBar"
  >
    <P
      label="CANCEL"
      to="/"
    />
  </ActionsBar>
</div>
`;

exports[`NewServer page without servers Component match snapshot 1`] = `
<div
  className="container"
>
  <div
    className="content"
  >
    <h1>
      Add a Server
    </h1>
    <h3
      className="subtitle"
    >
      Before working on a project, you must first connect to a local or remote server.
    </h3>
    <div
      className="servers"
    >
      <ServerOption
        Server={
          <Server
            direction="up"
          />
        }
        actionLabel="CONNECT"
        subtitle="Remote servers are ready and might contain active projects. You need access privileges to the Server before connecting to it."
        title="Connect to a Remote Server"
        to="/connect-to-remote-server"
      />
      <ServerOption
        Server={
          <Server
            direction="down"
          />
        }
        actionLabel="INSTALL"
        subtitle="You can work locally by installing a KDL Server in your machine. Only one local Server can be installed."
        title="Install a Local Server"
        to="/check-local-server-requirements"
      />
    </div>
  </div>
</div>
`;
